--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.1",
+    "axios": "^0.24.0",
     "clsx": "^1.1.1",
     "next": "12.0.4",
     "react": "17.0.2",
