--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.1",
+    "@mui/x-data-grid": "^5.0.1",
     "axios": "^0.24.0",
     "clsx": "^1.1.1",
+    "csv": "^6.0.4",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.4.2"
+    "react-dropzone": "^11.4.2",
+    "react-query": "^3.33.6"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
